WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234186
[JSC] isTaggedJSCCodePtrImpl does not have proper implementation for JITCage & JITCode combination
https://bugs.webkit.org/show_bug.cgi?id=234186
Summary
[JSC] isTaggedJSCCodePtrImpl does not have proper implementation for JITCage ...
Yusuke Suzuki
Reported
2021-12-10 16:24:44 PST
[JSC] isTaggedJSCCodePtrImpl does not have proper implementation for JITCage & JITCode combination
Attachments
Patch
(1.46 KB, patch)
2021-12-10 16:25 PST
,
Yusuke Suzuki
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2021-12-10 16:25:49 PST
Created
attachment 446843
[details]
Patch
Mark Lam
Comment 2
2021-12-10 16:35:43 PST
Comment on
attachment 446843
[details]
Patch r=me
Yusuke Suzuki
Comment 3
2021-12-10 16:57:03 PST
useJITCage is false right now so let's just land it.
Yusuke Suzuki
Comment 4
2021-12-10 17:11:08 PST
Committed
r286891
(
245119@trunk
): <
https://commits.webkit.org/245119@trunk
>
Radar WebKit Bug Importer
Comment 5
2021-12-10 17:12:18 PST
<
rdar://problem/86347168
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug