[JSC] isTaggedJSCCodePtrImpl does not have proper implementation for JITCage & JITCode combination https://bugs.webkit.org/show_bug.cgi?id=234186

Reviewed by Mark Lam.

If JITCage is enabled and target code is JITCode, we should use tagJSCCodePtrImpl.

* runtime/JSCPtrTag.h:
(JSC::isTaggedJSCCodePtrImpl):


Canonical link: https://commits.webkit.org/245119@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286891 268f45cc-cd09-0410-ab3c-d52691b4dbfc